--- a/SchoolApp/angular.json
+++ b/SchoolApp/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "SchoolApp": {
+    "SchoolErp": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,20 +13,24 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/SchoolApp",
+            "outputPath": "dist/SchoolErp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": true,
+            "aot": false,
             "assets": [
               "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -41,6 +45,7 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
+              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
@@ -62,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "SchoolApp:build"
+            "browserTarget": "SchoolErp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "SchoolApp:build:production"
+              "browserTarget": "SchoolErp:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "SchoolApp:build"
+            "browserTarget": "SchoolErp:build"
           }
         },
         "test": {
@@ -110,15 +115,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "SchoolApp:serve"
+            "devServerTarget": "SchoolErp:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "SchoolApp:serve:production"
+              "devServerTarget": "SchoolErp:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "SchoolApp"
+    }
+  },
+  "defaultProject": "SchoolErp",
+  "cli": {
+    "analytics": false
+  }
 }
